Fixed flicker bug on hover with padding instead of margin

--- a/src/components/modal/style.css
+++ b/src/components/modal/style.css
@@ -79,7 +79,7 @@
       
           @media (min-width: 768px) {
             &:hover {
-              margin-left: 0.5rem;
+              padding-left: 0.5rem;
             }
           }
         }
